fix: remove nginx CORS handling, use wildcard origin patterns in Spring